# pircolate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
benches/: parsing.rs
src/: arc_slice.rs  command.rs  error.rs  lib.rs  tag.rs
src/command/: mod.rs  twitch.rs
src/message/: client.rs  mod.rs  parser.rs  server.rs  twitch.rs
tests/pircolate-fuzz/: Cargo.toml
tests/pircolate-fuzz/src/: main.rs
