[package]
name = "pircolate"
version = "0.3.0"
authors = ["Joshua R. Rodgers <bytemr@gmail.com>"]
license = "Apache-2.0/MIT"
description = "Parser and interface for IRCv3 messages."
edition = "2018"

[dependencies]
err-derive = "0.1.6"

[features]
default = []

# Twitch IRC client support.
twitch-client = []