[package]
name = "pircolate"
version = "0.3.0"
authors = ["Joshua R. Rodgers <bytemr@gmail.com>"]
license = "Apache-2.0/MIT"
description = "Parser and interface for IRCv3 messages."
edition = "2018"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"

[features]
default = []

# Twitch IRC client support.
twitch-client = []

[workspace]
members = [
    "tests/pircolate-fuzz"
]